# OpenSceneGraph_HumanPrototype

./: README.md
OSG_HumanPrototype/: ExampleClass.cpp  ExampleClass.h  main.cpp
OSG_HumanPrototype/make/: CMakeLists.txt
OSG_HumanPrototype/make/MSVS_2015/: osg-UNCC-package.props
OSG_HumanPrototype/make/MSVS_2015/jroy/x64/Example Project_1/: Example Project_1.cpp  Example Project_1.vcxproj  Example Project_1.vcxproj.filters  ReadMe.txt  stdafx.cpp
OSG_HumanPrototype/make/MSVS_2015/jroy/x64/Example Project_1/x64/Debug/: Example Project_1.pch  Example Project_1.vcxprojResolveAssemblyReference.cache  example project_1.obj.enc  vc140.idb
OSG_HumanPrototype/make/MSVS_2015/jroy/x64/Example Project_1/x64/Debug/Example .2590E749.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Example Project_1.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
